<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/user_name_text"
        app:layout_constraintStart_toStartOf="@id/user_name_text" />

    <EditText
        android:id="@+id/user_name_text"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textEmailAddress"
        android:text="@string/login_gabriel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/user_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/user_name_text"
        app:layout_constraintTop_toBottomOf="@id/user_name_text" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password_gabriel"
        app:layout_constraintStart_toStartOf="@id/user_name_text"
        app:layout_constraintTop_toBottomOf="@id/user_password_label" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/user_password"
        app:layout_constraintStart_toStartOf="@id/user_password"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

</android.support.constraint.ConstraintLayout>